--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -9,6 +9,10 @@ footer {
     padding-bottom: 20px;
 }
 
+.footer-style {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
 .footer-link {
     color: #ffffff;
     text-decoration: none;
